--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Description: What the package does (one paragraph).
 License: CC BY 4.0
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
 URL: https://github.com/jdberson/dungfaunaR
 BugReports: https://github.com/jdberson/dungfaunaR/issues
 Suggests: 
@@ -24,3 +24,21 @@ Suggests:
 Depends: 
     R (>= 2.10)
 LazyData: true
+Imports:
+    directlabels (>= 2021.1.13),
+    dplyr (>= 1.1.0),
+    ggplot2 (>= 3.4.1),
+    ggtext (>= 0.1.2),
+    htmlwidgets (>= 1.5.4),
+    leafem (>= 0.2.0),
+    leaflet (>= 2.1.1),
+    leaflet.extras (>= 1.0.0),
+    lubridate (>= 1.9.2),
+    RColorBrewer (>= 1.1.3),
+    scales (>= 1.2.0),
+    shinyalert (>= 3.0.0),
+    shinyjs (>= 2.1.0),
+    shinyWidgets (>= 0.7.1),
+    stringr (>= 1.5.0)
+Remotes: 
+    jakemanger/leaflet.extras
